# GALP

./: CMakeLists.txt  LICENSE  README.md
GALP/: CMakeLists.txt  GALP.hpp
GALP/include/: Application.hpp  Button.hpp  HBox.hpp  Label.hpp  Object.hpp  Slider.hpp  SpinBox.hpp  Utility.hpp  VBox.hpp  ignore.txt  resources.hpp  windef.hpp
GALP/lib/: Application.cpp  Button.cpp  HBox.cpp  Label.cpp  LineEdit.cpp  Slider.cpp  Utility.cpp  VBox.cpp  resources.cpp  widget.cpp
application/: main.cpp
example/: AddShortcut.cpp  CMakeLists.txt  HBox.cpp  buttton.cpp  label.cpp  slider.cpp  test.cpp
sources/application/: main.cpp
sources/lib/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  GALP.hpp  HBox.cpp  HBox.hpp  Label.cpp  Label.hpp  LineEdit.cpp  LineEdit.hpp  Slider.cpp  Slider.hpp  SpinBox.cpp  SpinBox.hpp  Utility.cpp  Utility.hpp  Utlity.hpp  widget.cpp  widget.hpp  windef.hpp
